--- a/form.html
+++ b/form.html
@@ -2,151 +2,149 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact | Box Alarm Concepts</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Contact & Custom Order Form | Box Alarm Concepts</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Helvetica:wght@400;700&display=swap">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #0F0F0F;
+      font-family: Helvetica, sans-serif;
+      background-color: #0F0F0F;
       color: #F4F4F4;
-      max-width: 600px;
-      margin: 40px auto;
-      padding: 20px;
-      border-radius: 8px;
+      padding: 2rem;
+      max-width: 800px;
+      margin: auto;
     }
-    .logo {
-      display: block;
-      margin: 0 auto 20px;
-      max-width: 180px;
+    h1 {
+      color: #D7263D;
+      font-size: 2rem;
     }
     label {
       display: block;
-      margin-top: 15px;
+      margin-top: 1rem;
       font-weight: bold;
     }
-    input[type="text"],
-    input[type="email"],
-    input[type="number"],
-    select,
-    textarea {
+    input, select, textarea, button {
       width: 100%;
-      padding: 8px;
-      margin-top: 5px;
+      padding: 0.5rem;
+      margin-top: 0.25rem;
+      border-radius: 8px;
       border: none;
-      border-radius: 4px;
-      font-size: 14px;
-    }
-    textarea {
-      resize: vertical;
-      min-height: 80px;
-    }
-    input[type="radio"] {
-      margin-right: 8px;
-    }
-    .inline-label {
-      display: inline-block;
-      margin-right: 15px;
-      font-weight: normal;
+      font-size: 1rem;
     }
     button {
-      margin-top: 25px;
       background-color: #D7263D;
       color: white;
-      font-weight: bold;
-      border: none;
-      padding: 12px 20px;
-      border-radius: 6px;
+      margin-top: 1.5rem;
       cursor: pointer;
-      font-size: 16px;
     }
-    button:hover {
-      background-color: #b02032;
+    .logo {
+      max-width: 220px;
+      margin-bottom: 2rem;
     }
   </style>
 </head>
 <body>
-  <img src="assets/boxalarm-logo.png" alt="Box Alarm Concepts Logo" class="logo" />
-  <h1>Contact Box Alarm Concepts</h1>
-  <form id="contact-form" method="POST" action="https://script.google.com/macros/s/AKfycbyYa5_3wS_HEGIdKEhDEkT1Ufry2YoT3dmWwn9UJZegOoCzygbeQPnLoKxEWi_Pu1Mw/exec">
-    <label for="name">Name:</label>
-    <input id="name" name="name" type="text" required />
+  <img class="logo" src="https://github.com/boxalarmconcepts/site/blob/main/assets/boxalarm-logo.png?raw=true" alt="Box Alarm Concepts Logo" />
+  <h1>Contact & Custom Order Request</h1>
+  <form id="contactForm">
+    <label for="name">Name*</label>
+    <input type="text" name="name" required />
 
-    <label for="email">Email:</label>
-    <input id="email" name="email" type="email" required />
+    <label for="email">Email*</label>
+    <input type="email" name="email" required />
 
-    <label for="phone">Phone Number (optional):</label>
-    <input id="phone" name="phone" type="text" />
+    <label for="contactMethod">Preferred Contact Method</label>
+    <select name="contactMethod">
+      <option value="Email">Email</option>
+      <option value="Phone">Phone</option>
+      <option value="Either">Either</option>
+    </select>
 
-    <label>Preferred Contact Method:</label>
-    <label class="inline-label"><input type="radio" name="contact_method" value="Email" checked /> Email</label>
-    <label class="inline-label"><input type="radio" name="contact_method" value="Phone" /> Phone</label>
-    <label class="inline-label"><input type="radio" name="contact_method" value="Either" /> Either</label>
+    <label for="phone">Phone (optional)</label>
+    <input type="tel" name="phone" />
 
-    <label for="contact_type">Contact Type:</label>
-    <select id="contact_type" name="contact_type" required>
+    <label for="inquiryType">Inquiry Type*</label>
+    <select name="inquiryType" required>
       <option value="Custom Order">Custom Order</option>
-      <option value="Product Question">Product Question</option>
-      <option value="Suggestion">Suggestion</option>
-      <option value="General Inquiry">General Inquiry</option>
+      <option value="Idea Submission">Idea Submission</option>
+      <option value="General Support">General Support</option>
+      <option value="Collaboration Opportunity">Collaboration Opportunity</option>
       <option value="Other">Other</option>
     </select>
 
-    <label>Are you a responder or civilian?</label>
-    <label class="inline-label"><input type="radio" name="responder_status" value="Responder" onclick="toggleResponder(true)" /> Responder</label>
-    <label class="inline-label"><input type="radio" name="responder_status" value="Civilian" onclick="toggleResponder(false)" /> Civilian</label>
+    <label for="message">Tell us more*</label>
+    <textarea name="message" rows="5" required></textarea>
 
-    <div id="responder-section" style="display:none; margin-top: 10px;">
-      <label for="responder_type">Type of Responder:</label>
-      <select id="responder_type" name="responder_type" onchange="toggleFireFields(this.value)">
-        <option value="">Select</option>
+    <label for="responderStatus">Are you a responder or civilian?*</label>
+    <select name="responderStatus" required onchange="toggleResponderFields(this.value)">
+      <option value="Responder">Responder</option>
+      <option value="Civilian">Civilian</option>
+    </select>
+
+    <div id="responderFields" style="display:none;">
+      <label for="responderType">Type of Responder</label>
+      <select name="responderType">
         <option value="Fire">Fire</option>
         <option value="EMS">EMS</option>
-        <option value="LEO">LEO</option>
-        <option value="Dispatch">Dispatch</option>
+        <option value="LEO">Law Enforcement</option>
         <option value="Military">Military</option>
         <option value="Other">Other</option>
       </select>
 
-      <div id="fire-options" style="display:none; margin-top: 10px;">
-        <label>Career or Volunteer:</label>
-        <label class="inline-label"><input type="radio" name="fire_type" value="Career" /> Career</label>
-        <label class="inline-label"><input type="radio" name="fire_type" value="Volunteer" /> Volunteer</label>
-        <label class="inline-label"><input type="radio" name="fire_type" value="Both" /> Both</label>
+      <div id="fireFields" style="display:none;">
+        <label for="fireType">Are you Career or Volunteer?</label>
+        <select name="fireType">
+          <option value="Career">Career</option>
+          <option value="Volunteer">Volunteer</option>
+        </select>
       </div>
-
-      <label for="agency_name">Agency Name:</label>
-      <input id="agency_name" name="agency_name" type="text" />
-
-      <label for="agency_size">Agency Size:</label>
-      <input id="agency_size" name="agency_size" type="number" min="1" />
     </div>
 
-    <div id="civilian-section" style="display:none; margin-top: 10px;">
-      <label>Do you consider yourself a prepper?</label>
-      <label class="inline-label"><input type="radio" name="prepper" value="Yes" /> Yes</label>
-      <label class="inline-label"><input type="radio" name="prepper" value="No" /> No</label>
-      <label class="inline-label"><input type="radio" name="prepper" value="Somewhat" /> Somewhat</label>
+    <div id="civilianFields" style="display:none;">
+      <label for="prepperStatus">Do you consider yourself a prepper?</label>
+      <select name="prepperStatus">
+        <option value="Yes">Yes</option>
+        <option value="No">No</option>
+      </select>
     </div>
 
-    <label for="message">Message / Details:</label>
-    <textarea id="message" name="message" required></textarea>
+    <label for="agency">Agency Name</label>
+    <input type="text" name="agency" />
 
-    <label>Are you interested in beta testing?</label>
-    <label class="inline-label"><input type="radio" name="beta" value="Yes" /> Yes</label>
-    <label class="inline-label"><input type="radio" name="beta" value="No" checked /> No</label>
+    <label for="agencySize">Agency Size (Approximate)</label>
+    <input type="text" name="agencySize" />
 
     <button type="submit">Submit</button>
   </form>
 
   <script>
-    function toggleResponder(isResponder) {
-      document.getElementById('responder-section').style.display = isResponder ? 'block' : 'none';
-      document.getElementById('civilian-section').style.display = isResponder ? 'none' : 'block';
+    const form = document.getElementById('contactForm');
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const data = new FormData(form);
+      const response = await fetch("https://script.google.com/macros/s/AKfycbyYa5_3wS_HEGIdKEhDEkT1Ufry2YoT3dmWwn9UJZegOoCzygbeQPnLoKxEWi_Pu1Mw/exec", {
+        method: "POST",
+        body: data,
+      });
+      if (response.ok) {
+        window.location.href = "https://boxalarmconcepts.github.io/site/confirmation.html";
+      } else {
+        alert("Submission failed. Please try again.");
+      }
+    });
+
+    function toggleResponderFields(status) {
+      const responderFields = document.getElementById('responderFields');
+      const civilianFields = document.getElementById('civilianFields');
+      const fireFields = document.getElementById('fireFields');
+
+      responderFields.style.display = (status === 'Responder') ? 'block' : 'none';
+      civilianFields.style.display = (status === 'Civilian') ? 'block' : 'none';
     }
 
-    function toggleFireFields(value) {
-      document.getElementById('fire-options').style.display = value === 'Fire' ? 'block' : 'none';
-    }
+    document.querySelector('select[name="responderType"]').addEventListener('change', (e) => {
+      document.getElementById('fireFields').style.display = e.target.value === 'Fire' ? 'block' : 'none';
+    });
   </script>
 </body>
 </html>
