--- a/form.html
+++ b/form.html
@@ -1,162 +1,83 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact & Custom Order Form | Box Alarm Concepts</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Helvetica:wght@400;700&display=swap">
-  <style>
-    body {
-      font-family: Helvetica, sans-serif;
-      background-color: #0F0F0F;
-      color: #F4F4F4;
-      padding: 2rem;
-      max-width: 800px;
-      margin: auto;
+<script>
+  const form = document.getElementById('contactForm');
+
+  // Show/hide responder or civilian fields based on responderStatus select value
+  function toggleResponderFields(status) {
+    const responderFields = document.getElementById('responderFields');
+    const civilianFields = document.getElementById('civilianFields');
+    const fireFields = document.getElementById('fireFields');
+
+    if (status === 'Responder') {
+      responderFields.style.display = 'block';
+      civilianFields.style.display = 'none';
+    } else if (status === 'Civilian') {
+      responderFields.style.display = 'none';
+      civilianFields.style.display = 'block';
+    } else {
+      responderFields.style.display = 'none';
+      civilianFields.style.display = 'none';
     }
-    h1 {
-      color: #D7263D;
-      font-size: 2rem;
+
+    // Reset fireFields when responderStatus changes
+    fireFields.style.display = 'none';
+
+    // Reset responderType select when responderFields hidden
+    if (responderFields.style.display === 'none') {
+      document.querySelector('select[name="responderType"]').value = '';
     }
-    label {
-      display: block;
-      margin-top: 1rem;
-      font-weight: bold;
+  }
+
+  // Show/hide fireType field when responderType is Fire
+  function toggleFireFields(type) {
+    const fireFields = document.getElementById('fireFields');
+    if (type === 'Fire') {
+      fireFields.style.display = 'block';
+    } else {
+      fireFields.style.display = 'none';
     }
-    input, select, textarea, button {
-      width: 100%;
-      padding: 0.5rem;
-      margin-top: 0.25rem;
-      border-radius: 8px;
-      border: none;
-      font-size: 1rem;
-    }
-    button {
-      background-color: #D7263D;
-      color: white;
-      margin-top: 1.5rem;
-      cursor: pointer;
-    }
-    .logo {
-      max-width: 220px;
-      margin-bottom: 2rem;
-    }
-  </style>
-</head>
-<body>
-  <img class="logo" src="https://github.com/boxalarmconcepts/site/blob/main/assets/boxalarm-logo.png?raw=true" alt="Box Alarm Concepts Logo" />
-  <h1>Contact & Custom Order Request</h1>
-  <form id="contactForm">
-    <label for="name">Name*</label>
-    <input type="text" name="name" required />
+  }
 
-    <label for="email">Email*</label>
-    <input type="email" name="email" required />
+  // Event listeners for toggling fields
+  document.querySelector('select[name="responderStatus"]').addEventListener('change', (e) => {
+    toggleResponderFields(e.target.value);
+  });
 
-    <label for="contactMethod">Preferred Contact Method</label>
-    <select name="contactMethod">
-      <option value="Email">Email</option>
-      <option value="Phone">Phone</option>
-      <option value="Either">Either</option>
-    </select>
+  document.querySelector('select[name="responderType"]').addEventListener('change', (e) => {
+    toggleFireFields(e.target.value);
+  });
 
-    <label for="phone">Phone (optional)</label>
-    <input type="tel" name="phone" />
+  // Initialize field visibility on page load
+  window.addEventListener('DOMContentLoaded', () => {
+    const responderStatusSelect = document.querySelector('select[name="responderStatus"]');
+    const responderTypeSelect = document.querySelector('select[name="responderType"]');
 
-    <label for="inquiryType">Inquiry Type*</label>
-    <select name="inquiryType" required>
-      <option value="Custom Order">Custom Order</option>
-      <option value="Idea Submission">Idea Submission</option>
-      <option value="General Support">General Support</option>
-      <option value="Collaboration Opportunity">Collaboration Opportunity</option>
-      <option value="Other">Other</option>
-    </select>
+    toggleResponderFields(responderStatusSelect.value);
+    toggleFireFields(responderTypeSelect.value);
+  });
 
-    <label for="message">Tell us more*</label>
-    <textarea name="message" rows="5" required></textarea>
+  // Form submit handler
+  form.addEventListener('submit', async (e) => {
+    e.preventDefault();
+    const data = new FormData(form);
 
-    <label for="responderStatus">Are you a responder or civilian?*</label>
-    <select name="responderStatus" required onchange="toggleResponderFields(this.value)">
-      <option value="Responder">Responder</option>
-      <option value="Civilian">Civilian</option>
-    </select>
+    try {
+      const response = await fetch("https://script.google.com/macros/s/AKfycbyYa5_3wS_HEGIdKEhDEkT1Ufry2YoT3dmWwn9UJZegOoCzygbeQPnLoKxEWi_Pu1Mw/exec", {
+        method: "POST",
+        body: data,
+      });
 
-    <div id="responderFields" style="display:none;">
-      <label for="responderType">Type of Responder</label>
-      <select name="responderType">
-        <option value="Fire">Fire</option>
-        <option value="EMS">EMS</option>
-        <option value="LEO">Law Enforcement</option>
-        <option value="Military">Military</option>
-        <option value="Other">Other</option>
-      </select>
-
-      <div id="fireFields" style="display:none;">
-        <label for="fireType">Are you Career or Volunteer?</label>
-        <select name="fireType">
-          <option value="Career">Career</option>
-          <option value="Volunteer">Volunteer</option>
-        </select>
-      </div>
-    </div>
-
-    <div id="civilianFields" style="display:none;">
-      <label for="prepperStatus">Do you consider yourself a prepper?</label>
-      <select name="prepperStatus">
-        <option value="Yes">Yes</option>
-        <option value="No">No</option>
-      </select>
-    </div>
-
-    <label for="agency">Agency Name</label>
-    <input type="text" name="agency" />
-
-    <label for="agencySize">Agency Size (Approximate)</label>
-    <input type="text" name="agencySize" />
-
-    <button type="submit">Submit</button>
-  </form>
-
-  <script>
-    const form = document.getElementById('contactForm');
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const data = new FormData(form);
-
-      try {
-        const response = await fetch("https://script.google.com/macros/s/AKfycbyYa5_3wS_HEGIdKEhDEkT1Ufry2YoT3dmWwn9UJZegOoCzygbeQPnLoKxEWi_Pu1Mw/exec", {
-          method: "POST",
-          body: data,
-        });
-
-        if (response.ok) {
-          const json = await response.json();
-          if (json.redirect) {
-            window.location.href = json.redirect;
-          } else {
-            window.location.href = "https://boxalarmconcepts.github.io/site/confirmation.html";
-          }
+      if (response.ok) {
+        const json = await response.json();
+        if (json.redirect) {
+          window.location.href = json.redirect;
         } else {
-          alert("Submission failed. Please try again.");
+          window.location.href = "https://boxalarmconcepts.github.io/site/confirmation.html";
         }
-      } catch (error) {
-        alert("There was an error submitting the form: " + error.message);
+      } else {
+        alert("Submission failed. Please try again.");
       }
-    });
-
-    function toggleResponderFields(status) {
-      const responderFields = document.getElementById('responderFields');
-      const civilianFields = document.getElementById('civilianFields');
-      const fireFields = document.getElementById('fireFields');
-
-      responderFields.style.display = (status === 'Responder') ? 'block' : 'none';
-      civilianFields.style.display = (status === 'Civilian') ? 'block' : 'none';
-      fireFields.style.display = 'none'; // Reset fireFields on status change
+    } catch (error) {
+      alert("There was an error submitting the form: " + error.message);
     }
-
-    document.querySelector('select[name="responderType"]').addEventListener('change', (e) => {
-      document.getElementById('fireFields').style.display = e.target.value === 'Fire' ? 'block' : 'none';
-    });
-  </script>
-</body>
-</html>
+  });
+</script>
